tests/ivg/invalid/radial_gradient_radius_out_of_range.ivg
format IVG-3
fill gradient:[radial 0,0,32768 from:white to:black]
